# tsdc-core

core/scripts/cmake/: CMakeLists.txt
core/src/: filesystem.h  pattern.h  system.h
core/src/filesystem/: Operations.h  UriScheme.h
core/src/pattern/: Factory-inl.h  Factory.h  Manager.h  Publisher.h  Singleton.h
core/src/system/: Error.h  Platform.h  Strid.h  ThirdParty.h  Type.h
research/opencl/addvectors/scripts/cmake/: CMakeLists.txt
research/opencl/addvectors/src/: ClManager.cpp  ClManager.h  main.cl  main.cpp
research/opencl/detect/scripts/cmake/: CMakeLists.txt
research/opencl/detect/src/: ClManager.cpp  ClManager.h  PrintManager.cpp  PrintManager.h  main.cl  main.cpp
research/opencl/hello/scripts/cmake/: CMakeFunctions.txt  CMakeLists.txt
research/opencl/hello/src/: ClDeviceInfo.h  ClManager.cpp  ClManager.h  ClPlatformInfo.h  PrintManager.cpp  PrintManager.h  main.cl  main.cpp
research/opencl/relax/scripts/cmake/: CMakeLists.txt
research/opencl/relax/src/: Main.cpp
research/opencl/relax/src/relax/: Cpu.cpp  Cpu.hpp  Gpu.cl  Gpu.cpp  Gpu.hpp  Shared.cpp  Shared.hpp
research/opencl/relax/src/rssdcl/: ClBuffer.cpp  ClBuffer.h  ClKernel.h  ClManager.cpp  ClManager.h
